[gd_scene load_steps=5 format=3 uid="uid://d3bxgened128f"]

[ext_resource type="Texture2D" uid="uid://drdq33qkcvac7" path="res://UI/setting.png" id="1_678h0"]
[ext_resource type="Texture2D" uid="uid://d17s5pc6uj6xs" path="res://UI/Habit.png" id="1_frp3j"]
[ext_resource type="Texture2D" uid="uid://buli6v2yiohfa" path="res://UI/EXIT.png" id="2_5hb7e"]
[ext_resource type="Script" path="res://UI/taskItem.gd" id="2_nxhdo"]

[node name="taskItem" type="TextureRect"]
offset_right = 586.0
offset_bottom = 127.0
texture = ExtResource("1_frp3j")
script = ExtResource("2_nxhdo")

[node name="name" type="LineEdit" parent="."]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_right = 128.0
grow_vertical = 2
editable = false
flat = true

[node name="ket" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 128.0
offset_right = 583.0
offset_bottom = 128.0
editable = false

[node name="setting" type="Button" parent="ket"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -72.0
offset_top = -72.0
grow_horizontal = 0
grow_vertical = 0
icon = ExtResource("1_678h0")

[node name="delete" type="Button" parent="ket"]
visible = false
layout_mode = 0
offset_left = 310.0
offset_top = 56.0
offset_right = 382.0
offset_bottom = 128.0
icon = ExtResource("2_5hb7e")

[node name="CheckButton" type="CheckButton" parent="ket"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -44.0
offset_bottom = 42.0
grow_horizontal = 0
expand_icon = true

[node name="Line2D" type="Line2D" parent="."]
visible = false
points = PackedVector2Array(0, 65, 585, 65)
default_color = Color(0.0353462, 0.0353462, 0.0353462, 1)

[connection signal="pressed" from="ket/setting" to="." method="_on_setting_pressed"]
[connection signal="button_down" from="ket/delete" to="." method="_on_delete_button_down"]
[connection signal="toggled" from="ket/CheckButton" to="." method="_on_check_button_toggled"]
